feat(api): adds support for cookies
